--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
   </section>
 
   <footer>
-    © 2026 Mansha Madaan. Built with HTML, CSS & JavaScript.
+    © 2026 Mansha Madaan.
   </footer>
 
   <script>
